--- a/.gitignore
+++ b/.gitignore
@@ -51,3 +51,12 @@ rsconnect/
 .DS_Store
 *.swp
 ~$*
+# analysis package generated files
+# see: https://jabenninghoff.github.io/rdev/articles/analysis-package-layout.html
+analysis/*.docx
+analysis/*.html
+analysis/*.md
+analysis/*.pdf
+analysis/*-figure/
+analysis/import
+analysis/rendered
