--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -20,11 +20,14 @@ Suggests:
     purrr,
     rdev (>= 1.9.5),
     rmarkdown,
+    spelling,
     testthat (>= 3.0.0),
-    usethis
+    usethis,
+    withr
 Remotes: 
     jabenninghoff/rdev
 Config/testthat/edition: 3
 Encoding: UTF-8
+Language: en-US
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.1
