Add Hex Stickers (rdev)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,12 +14,14 @@ Suggests:
     devtools,
     dplyr,
     fs,
+    hexSticker,
     knitr,
     pkgdown,
     pkgload,
     purrr,
     rdev (>= 1.9.5),
     rmarkdown,
+    showtext,
     spelling,
     testthat (>= 3.0.0),
     usethis,
