--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,6 +30,7 @@ Suggests:
     usethis,
     withr
 Remotes: 
+    jabenninghoff/jbplot,
     jabenninghoff/rdev
 Config/testthat/edition: 3
 Encoding: UTF-8
