--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -10,11 +10,16 @@ navbar:
     - tutorials
     - news
     - analysis
-    right: github
+    right:
+    - search
+    - github
+    - lightswitch
   components:
     reference:
       text: Reference
       href: reference/index.html
+    search:
+      search: []
     news:
       text: Changelog
       href: news/index.html
@@ -26,4 +31,4 @@ navbar:
     github:
       icon: fab fa-github fa-lg
       href: https://github.com/jabenninghoff/stickers/
-      aria-label: github
+      aria-label: GitHub
