--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,8 @@
-pandoc: 3.1.13
-pkgdown: 2.0.9
+pandoc: '3.5'
+pkgdown: 2.1.1
 pkgdown_sha: ~
 articles: {}
-last_built: 2024-04-26T15:02Z
+last_built: 2024-11-16T23:42Z
 urls:
   reference: https://jabenninghoff.github.io/stickers/reference
   article: https://jabenninghoff.github.io/stickers/articles
-
