--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,8 @@
-pandoc: '3.5'
+pandoc: 3.6.2
 pkgdown: 2.1.1
 pkgdown_sha: ~
 articles: {}
-last_built: 2024-11-17T00:05Z
+last_built: 2025-01-30T18:41Z
 urls:
   reference: https://jabenninghoff.github.io/stickers/reference
   article: https://jabenninghoff.github.io/stickers/articles
